@@ -536,7 +536,6 @@ rpmlog(RPMLOG_DEBUG, D_("   Comparing compat archs %s ? %s\n"), arch, t);
 int rpmtsAddInstallElement(rpmts ts, Header h,
 			fnpyKey key, int upgrade, rpmRelocation relocs)
 {
-    static const char msg[] = "rpmtsAddInstallElement";
     HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
     rpmdepFlags depFlags = rpmtsDFlags(ts);
     uint32_t tscolor = rpmtsColor(ts);
@@ -695,7 +694,7 @@ assert(he->p.str != NULL);
 	    break;
 	}
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     oldChk = rpmdsFree(oldChk);
     newChk = rpmdsFree(newChk);
 
@@ -789,7 +788,7 @@ assert(p != NULL);
 exit:
     arch = _free(arch);
     os = _free(os);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     return ec;
 }
 
@@ -2057,7 +2056,6 @@ static inline int addRelation(rpmts ts,
 	/*@modifies ts, p, *selected, rpmGlobalMacroContext,
 		fileSystem, internalState @*/
 {
-    static const char msg[] = "addRelation";
     rpmtsi qi; rpmte q;
     tsortInfo tsi;
     nsType NSType = rpmdsNSType(requires);
@@ -2116,7 +2114,7 @@ static inline int addRelation(rpmts ts,
 	if (pkgKey == rpmteAddedKey(q))
 	    break;
     }
-    qi = rpmtsiFree(qi, msg);
+    qi = rpmtsiFree(qi);
     if (q == NULL || i >= ts->orderCount)
 	return 0;
 
@@ -2243,7 +2241,6 @@ static uint32_t _autobits = 0xffffffff;
 
 int rpmtsOrder(rpmts ts)
 {
-    static const char msg[] = "rpmtsOrder";
     rpmds requires;
     uint32_t Flags;
     int anaconda = rpmtsDFlags(ts) & RPMDEPS_FLAG_ANACONDA;
@@ -2295,7 +2292,7 @@ int rpmtsOrder(rpmts ts)
 	pkgKey = (alKey)(((long)pkgKey) + ts->numAddedPackages);
 	(void) rpmteSetAddedKey(p, pkgKey);
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     rpmalMakeIndex(ts->erasedPackages);
 
     (void) rpmswEnter(rpmtsOp(ts, RPMTS_OP_ORDER), 0);
@@ -2317,7 +2314,7 @@ int rpmtsOrder(rpmts ts)
     pi = rpmtsiInit(ts);
     while ((p = rpmtsiNext(pi, oType)) != NULL)
 	rpmteNewTSI(p);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* Record all relations. */
     rpmlog(RPMLOG_DEBUG, D_("========== recording tsort relations\n"));
@@ -2403,7 +2400,7 @@ int rpmtsOrder(rpmts ts)
 		p->type = TR_REMOVED;
 	    }
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
       }
 
       if (_autobits != 0xffffffff)
@@ -2431,7 +2428,7 @@ int rpmtsOrder(rpmts ts)
       }
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* Save predecessor count and mark tree roots. */
     treex = 0;
@@ -2455,14 +2452,14 @@ int rpmtsOrder(rpmts ts)
 #endif
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     ts->ntrees = treex;
 
     /* T4. Scan for zeroes. */
     rpmlog(RPMLOG_DEBUG, D_("========== tsorting packages (order, #predecessors, #succesors, tree, Ldepth, Rbreadth)\n"));
 
 rescan:
-    if (pi != NULL) pi = rpmtsiFree(pi, msg);
+    if (pi != NULL) pi = rpmtsiFree(pi);
     q = r = NULL;
     qlen = 0;
     pi = rpmtsiInit(ts);
@@ -2478,7 +2475,7 @@ rescan:
 	addQ(p, &q, &r, prefcolor);
 	qlen++;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* T5. Output front of queue (T7. Remove from queue.) */
     for (; q != NULL; q = rpmteTSI(q)->tsi_suc) {
@@ -2562,7 +2559,7 @@ rescan:
 		tsi->tsi_suc = p;
 		tsi = rpmteTSI(p);
 	    }
-	    pi = rpmtsiFree(pi, msg);
+	    pi = rpmtsiFree(pi);
 	    tsi->tsi_suc = NULL;
 	}
     }
@@ -2581,7 +2578,7 @@ rescan:
 	    if (rpmteTSI(q)->tsi_count == 0)
 		rpmteTSI(q)->tsi_count = -1;
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
 
 	/* T10. Mark all packages with their predecessors. */
 	qi = rpmtsiInit(ts);
@@ -2592,7 +2589,7 @@ rescan:
 	    markLoop(tsi, q);
 	    rpmteTSI(q)->tsi_next = tsi;
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
 
 	/* T11. Print all dependency loops. */
 	ri = rpmtsiInit(ts);
@@ -2651,7 +2648,7 @@ rescan:
 		rpmteTSI(p)->tsi_queued = 0;
 	    }
 	}
-	ri = rpmtsiFree(ri, msg);
+	ri = rpmtsiFree(ri);
 
 	/* If a relation was eliminated, then continue sorting. */
 	/* XXX TODO: add control bit. */
@@ -2676,7 +2673,7 @@ rescan:
     pi = rpmtsiInit(ts);
     while ((p = rpmtsiNext(pi, 0)) != NULL)
 	rpmteFreeTSI(p);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /*
      * The order ends up as installed packages followed by removed packages.
@@ -2690,7 +2687,7 @@ rescan:
 	orderList[j].orIndex = rpmtsiOc(pi);
 	j++;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     qsort(orderList, numOrderList, sizeof(*orderList), orderListIndexCmp);
 
@@ -2737,7 +2734,6 @@ assert(newOrderCount == ts->orderCount);
 
 int rpmtsCheck(rpmts ts)
 {
-    static const char msg[] = "rpmtsCheck";
     const char * depName = NULL;
     rpmdepFlags depFlags = rpmtsDFlags(ts);
     uint32_t tscolor = rpmtsColor(ts);
@@ -2834,7 +2830,7 @@ int rpmtsCheck(rpmts ts)
 	if (rc && (ourrc = rc) >= terminate)
 	    break;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     if (rc && (ourrc = rc) >= terminate)
 	goto exit;
 
@@ -2877,7 +2873,7 @@ int rpmtsCheck(rpmts ts)
 	if (rc && (ourrc = rc) >= terminate)
 	    break;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     if (rc && (ourrc = rc) >= terminate)
 	goto exit;
 
@@ -2899,7 +2895,7 @@ int rpmtsCheck(rpmts ts)
 
 exit:
     mi = rpmdbFreeIterator(mi);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     depName = _free(depName);
 
     (void) rpmswExit(rpmtsOp(ts, RPMTS_OP_CHECK), 0);
