@@ -464,7 +464,6 @@ fprintf(stderr, "\tav %p[%d]: \"%s\" -> %s ~= \"%s\"\n", gi->argv, (int)(av - gi
 
 rpmgi rpmgiFree(rpmgi gi)
 {
-    static const char msg[] = "rpmgiFree";
     int xx;
 
     if (gi == NULL) return NULL;
@@ -487,7 +486,7 @@ fprintf(stderr, "--> gi %p -- %ld %s(%s) at %s:%u\n", gi, yarnPeekLock(gi->_item
 	    xx = Fclose(gi->fd);
 	    gi->fd = NULL;
 	}
-	gi->tsi = rpmtsiFree(gi->tsi, msg);
+	gi->tsi = rpmtsiFree(gi->tsi);
 	gi->mi = rpmdbFreeIterator(gi->mi);
 	gi->ts = rpmtsFree(gi->ts);
 
@@ -539,7 +538,6 @@ static const char * _query_hdlist_path  = "/usr/share/comps/%{_arch}/hdlist";
 
 rpmRC rpmgiNext(/*@null@*/ rpmgi gi)
 {
-    static const char msg[] = "rpmgiNext";
     char hnum[32];
     rpmRC rpmrc = RPMRC_NOTFOUND;
     int xx;
@@ -640,7 +638,7 @@ nextkey:
 	    }
 	}
 	if (rpmrc != RPMRC_OK) {
-	    gi->tsi = rpmtsiFree(gi->tsi, msg);
+	    gi->tsi = rpmtsiFree(gi->tsi);
 	    goto enditer;
 	}
     }	break;
